     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/createVisitLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title" />

        <TextView
            android:id="@+id/visitInfoLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/visitInfo" />

        <EditText
            android:id="@+id/visitComment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.00"
            android:ems="10"
            android:inputType="textMultiLine" >

            <requestFocus />
        </EditText>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/supplierLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/outletsLabel" />

            <Spinner
                android:id="@+id/outlets"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </LinearLayout>

        <Button
            android:id="@+id/createOrderInVisitButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/createOrder" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/saveVisitButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/saveVisit" />

            <Button
                android:id="@+id/closeVisitButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/closeVisit" />

        </LinearLayout>

    </LinearLayout>
